# mpt-extension-example

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LLM.md  README.md  compose.yaml  manifest.yaml  meta.yaml  settings.yaml
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/app/: api.py  auth.py  client.py  config.py  dependencies.py  extension.py  logging.py  main.py  schema.py  utils.py
backend/app/routers/: api.py  bypass.py  deferreds.py  events.py  schedules.py  webhooks.py
docs/: adding-api-endpoints.md  adding-deferred-handlers.md  adding-event-handlers.md  adding-scheduled-handlers.md  adding-unauthenticated-endpoints.md  adding-webhook-handlers.md  injectable-dependencies.md  installation-client.md  mpt-client.md  platform-context.md  project-structure.md  settings.md
frontend/: esbuild.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: globals.d.ts  style.scss
frontend/src/fixes/: README.md  global-styling.scss  modal-layout.scss  safe-storage.ts  wizard.scss
frontend/src/modules/add/: App.scss  App.tsx  index.tsx
frontend/src/modules/dialog/: App.tsx  index.tsx
frontend/src/modules/examples/: App.tsx  index.tsx
frontend/src/modules/examples/views/: Api.tsx  Basics.tsx  Context.tsx  Elements.scss  Elements.tsx  Intro.tsx  Modals.scss  Modals.tsx
frontend/src/modules/examples/views/elements/: ButtonExample.scss  ButtonExample.tsx  CheckboxExample.tsx  DatePickerExample.tsx  EntityReferenceExample.tsx  GridExample.tsx  InputExample.tsx  SelectExample.tsx  ShowCode.scss  ShowCode.tsx  ToggleExample.tsx
frontend/src/modules/guide/: App.tsx  index.tsx  text.md
frontend/src/modules/wizard/: App.scss  App.tsx
tools/: sync-llm.py
