[project]
name = "mpt-extension-example"
version = "0.0.0.dev0"
description = "Sample code for a SoftwareOne Marketplace Extension"
readme = { file = "../README.md", content-type = "text/markdown" }
authors = [
    { name = "SoftwareOne AG" },
]
license = { file = "../LICENSE.txt" }
requires-python = ">=3.12,<4"
dependencies = [
    "dynaconf>=3.2.12,<4.0.0",
    "fastapi[standard]>=0.131.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "mrok>=0.9.0,<2.0.0",
    "pydantic>=2.12.3,<3.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "typer>=0.24.1,<1.0.0",
]

[project.scripts]
runext = "app.main:app"

[dependency-groups]
dev = [
    "ipython>=9.4.0,<10.0.0",
    "ruff>=0.14.0,<0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
preview = true
add-bounds = "major"

[tool.ruff]
line-length = 100
target-version = "py312"
output-format = "full"
extend-exclude = [
    "migrations/versions/",
]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
preview = true # enable linting rules in preview (e.g. RUF029 as of 2025-02-20)
explicit-preview-rules = true # only enable preview rules we explicitly specify
select = [
    "E",      # w errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade,
    "PT",     # flake8-pytest-style
    "T10",    # flake8-pytest-style
    "RUF029", # unused-async
]
ignore = [
    "PT001", # Use `@pytest.fixture()` over `@pytest.fixture`
    "PT011", # pytest.raises({exception}) is too broad, set the match parameter or use a more specific exception
    "PT023", # @pytest.mark.parametrize` is missing required arguments
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
